--- a/srcs/.env
+++ b/srcs/.env
@@ -3,3 +3,8 @@ DOMAIN_NAME=ddantas-.42.fr
 MYSQL_DATABASE=maria
 MYSQL_USER=ddantas
 MYSQL_ROOT_PASSWORD=123456
+
+# WordPress setup
+WORDPRESS_DB_USER=root
+WORDPRESS_DB_PASSWORD=example
+WORDPRESS_DB_NAME=wordpress
