--- a/srcs/requirements/MariaDB/my.cnf
+++ b/srcs/requirements/MariaDB/my.cnf
@@ -1,10 +1,8 @@
 [mysqld]
-user=mysql
-datadir=/var/lib/mysql
-socket=/run/mysqld/mysqld.sock
+user=mysql # user of the process MariaDB
+pid-file = /var/run/mysqld/mysqld.pid #  PID file used
+bind-address = 0.0.0.0  # Listen on all interfaces
+port = 3306 # Ports MariaDB listens
+datadir=/var/lib/mysql # Path to store the Data
+socket = /var/run/mysqld/mysqld.sock # Unix sockewt used
 
-# Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
-
-# Custom configuration
-bind-address=0.0.0.0
