--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,46 +1,33 @@
 version: '3.8'
 
-services:
-  nginx:
-    build:
-      context: ./requirements/NGINX
-    ports:
-      - "443:443"
-    depends_on:
-      - wordpress
-    networks:
-      - wp-network
-    restart: always
-
-  wordpress:
-    build:
-      context: ./requirements/WordPress
-    volumes:
-      - wp-data:/var/www/html
-    environment:
-      WORDPRESS_DB_HOST: mariadb:3306
-      WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
-      WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
-      WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
-    networks:
-      - wp-network
-    restart: always
-
-  mariadb:
-    build:
-      context: ./requirements/MariaDB
-    volumes:
-      - db-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-    networks:
-      - wp-network
-    restart: always
+networks:
+  app-network:
+    name: app-network
+    driver: bridge
 
 volumes:
-  db-data:
-  wp-data:
+  mariadb_data:
+    driver: local 
+    driver_opts:
+      type: none
+      o: bind
+      device: ${MARIADB_PATH}
 
-networks:
-  wp-network:
+services:
+  mariadb:
+    build: ./requirements/MariaDB
+    container_name: mariadb
+    
+    environment:
+      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+      MARIADB_DATABASE: ${MARIADB_DATABASE}
+      MARIADB_USER: ${MARIADB_USER}
+      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
+    ports:
+      - 3306:3306
+    networks:
+      - app-network
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    restart: always
+  
