--- a/srcs/requirements/mariadb/my.cnf
+++ b/srcs/requirements/mariadb/my.cnf
@@ -3,6 +3,12 @@ user=mysql # user of the process MariaDB
 pid-file = /var/run/mysqld/mysqld.pid #  PID file used
 bind-address = 0.0.0.0  # Listen on all interfaces
 port = 3306 # Ports MariaDB listens
+
+tempdir = /tmp
 datadir=/var/lib/mysql # Path to store the Data
+
+log-error=/var/log/mysql/error.log 
+log_error_verbosity=3
+
 socket = /var/run/mysqld/mysqld.sock # Unix sockewt used
 
