container doesnt hang and run properly

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -13,4 +13,4 @@ EXPOSE 3306
 
 ENTRYPOINT [ "./script.sh" ]
 
-CMD [ "mysqld", "--user=root", "--socket=/run/mysqld/mysqld.sock", "--datadir='/var/lib/mysql'" ]
+# CMD [ "mysqld", "--user=root", "--socket=/run/mysqld/mysqld.sock", "--datadir='/var/lib/mysql'"]
