--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -10,4 +10,7 @@ COPY php.ini /etc/php/7.4/cli/php.ini
 COPY script.sh /
 RUN chmod +x script.sh
 
+EXPOSE 3306
+EXPOSE 9000
+
 ENTRYPOINT [ "./script.sh" ]
