--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -25,7 +25,8 @@ services:
     build: ./requirements/mariadb
     container_name: mariadb
     env_file: .env
-
+    ports:
+      - "3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
       
@@ -38,8 +39,11 @@ services:
     build: ./requirements/wordpress
     container_name: wordpress
     env_file: .env
+    ports:
+      - "3306:3306"
+      - "9000:9000"
     volumes:
-      - ./requirements/wordpress:/var/www/html
+      - wordpress_data:/var/www/html
     depends_on:
       - mariadb
     restart: unless-stopped
@@ -55,4 +59,5 @@ services:
       - wordpress
     ports:
       - "443:443"
+    restart: unless-stopped
 
