--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,11 +2,17 @@ FROM debian:bullseye
 
 # Install MariaDB and its dependencies
 RUN apt update && \
-	apt install nginx -y
+	apt install nginx openssl -y
 
 COPY script.sh /
 RUN chmod +x script.sh
 
+RUN service nginx start
+
+COPY nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 9000
 
-ENTRYPOINT [ "./script.sh" ]
+
+CMD [ "./script.sh" ]
+# CMD [ "nginx", "-g", "'daemon off;'" ]
