--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,10 +1,10 @@
 FROM debian:bullseye
 
 # Install MariaDB and its dependencies
-RUN apt update && \
-	apt install php php-common php-mysql php-gmp php-curl php-intl php-mbstring php-xmlrpc php-gd php-xml php-cli php-zip -y && \
-	apt install mariadb-client -y && \
-	mkdir -p /var/www/html/
+# RUN apt update && \
+	# apt install php php-common php-mysql php-gmp php-curl php-intl php-mbstring php-xmlrpc php-gd php-xml php-cli php-zip -y && \
+	# apt install mariadb-client -y && \
+	# mkdir -p /var/www/html/
 
 COPY php.ini /etc/php/7.4/cli/php.ini
 
@@ -14,4 +14,4 @@ RUN chmod +x script.sh
 EXPOSE 3306
 EXPOSE 9000
 
-ENTRYPOINT [ "./script.sh" ]
+CMD [ "./script.sh" ]
