--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
 		listen 443;
 		server_name "$DOMAIN_NAME"
 	
-		; ssl_protocols TLSv1.3;
+		ssl_protocols TLSv1.3;
 
 		resolver 127.0.0.1;
 	
