Trying get wordpress to work....

--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,18 +1,34 @@
 events {
-	worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
 
-	server {
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name ${DOMAIN_NAME};  # Replace with your domain or use environment variable
 
-		listen 443;
-		listen [::]:443 default_server;
-		server_name "$DOMAIN_NAME"
-	
-		ssl_protocols TLSv1.3;
+        ssl_protocols TLSv1.3;
+        ssl_certificate /etc/nginx/ssl/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
-		resolver 127.0.0.1;
-	
-	}
+        root /var/www/html;  # Path to your WordPress installation
+        index index.php index.html index.htm;
+
+        # Serve static files directly
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+
+        # Handle PHP scripts
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass php-fpm:9000;  # Ensure the service name matches your Docker setup
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+        }
+
+        resolver 127.0.0.1;  # DNS resolver for upstreams
+    }
 }
