--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -54,10 +54,14 @@ services:
     container_name: nginx
     env_file: .env
     
+    volumes:
+      - wordpress_data:/var/www/html
     ports:
       - "443:443"
     networks:
       - app-network
+    depends_on:
+      - wordpress
     
     restart: unless-stopped
 
