--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,22 @@
 FROM debian:bullseye
 
 RUN apt update && \
-	apt install nginx openssl -y
+	apt install nginx openssl -y && \
+	apt-get install certbot python3-certbot-nginx -y && \
+	mkdir -p /var/www/html/
 
+	
+RUN mkdir -p /etc/nginx/ssl
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/selfsigned.key -out /etc/nginx/ssl/selfsigned.crt \
+    -subj "/C=US/ST=State/L=City/O=Company/OU=Org/CN=localhost"
+	
 COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY ./script.sh /
+RUN chmod +x script.sh
+
 
 EXPOSE 433
 
-CMD [ "nginx", "-g", "daemon off;" ]
+CMD [ "./script.sh" ]
