--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,14 +1,12 @@
 FROM debian:bullseye
 
 RUN apt update && \
-	apt install mariadb-client php-fpm unzip -y && \
+	apt install mariadb-client php-fpm -y && \
 	apt upgrade php-fpm -y && \
 	mkdir -p /var/www/html/
 
-RUN groupadd wordpress_user && useradd -g wordpress_user wordpress_user
-
+# RUN groupadd wordpress_user && useradd -g wordpress_user wordpress_user
 # RUN sed -i 's/;daemonize = yes/daemonize = no/' /etc/php/7.4/fpm/php-fpm.conf
-
 
 COPY script.sh /
 RUN chmod +x script.sh
