--- a/srcs/requirements/nginx/nginx.conf.template
+++ b/srcs/requirements/nginx/nginx.conf.template
@@ -7,14 +7,14 @@ http {
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
-        server_name ${DOMAIN_NAME};  # Replace with your domain or use environment variable
+        server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};  # Replace with your domain or use environment variable
 
         ssl_protocols TLSv1.3;
         ssl_certificate /etc/nginx/ssl/selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
         root /var/www/html;  # Path to your WordPress installation
-        index index.php index.html index.htm;
+        index index.php;
 
         # Serve static files directly
         location / {
