--- a/srcs/requirements/nginx/nginx.conf.template
+++ b/srcs/requirements/nginx/nginx.conf.template
@@ -14,7 +14,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
         root /var/www/html;  # Path to your WordPress installation
-        index index.php;
+        index index.php index.html index.htm;
 
         # Serve static files directly
         location / {
