--- a/srcs/requirements/wordpress/wp-config.php.template
+++ b/srcs/requirements/wordpress/wp-config.php.template
@@ -38,14 +38,14 @@ define( 'WP_ALLOW_REPAIR', true );
  * @since 2.6.0
  */
 
-define('AUTH_KEY',         '`1yO(@Ja9ZCBKPhpS+$mN@e>Q3[JYnBdvUXDtx#zl$ch #U8I.te2>.B@W0lx]. ');
-define('SECURE_AUTH_KEY',  'W&8i1{O5^Ig#+|1g3xhKia(o6VSwq?zfpU%7]B.[|xxAf^R#;.D,3sC~RyfC4%Is');
-define('LOGGED_IN_KEY',    ' il]@=JIz^1z~3#L6->h~cH]wSS9`b*|{D6EVdFtAm_-T~0G|n3iuk)i~ L+s#S&');
-define('NONCE_KEY',        'Njn+5p!G-:;=&#{|BB-fFRKiizpf2jDUFZQ=fu9|sp<Kv.ToCh)Tbr-c1]OD,f]+');
-define('AUTH_SALT',        'I<uwcO|/ro8La=_ IlcA)5,DU,94JEl|C<|7pQYG+4aBm5^*Q7u!g>oR|b@8#v85');
-define('SECURE_AUTH_SALT', 'J#yNX6J;uO:h<5(8tFd3%FVI3s`H^tE4d`Q2xC2PipgLfmMYoe+@Yc}#Ipl;Iy4:');
-define('LOGGED_IN_SALT',   'B,LI*D[F+|+D8c~NaEg+FW/NqV}!;!k?Q-pI_w>91@$ u3l<}QT{Wj;?al|&&=xd');
-define('NONCE_SALT',       '>M3vzLGi=e(LpU4Sve4@1S#O@S[=dq6x)+MA.%{n5xHBC$deYEq$eE#@L]j[/h;M');
+define('AUTH_KEY',         'f*!$(qd(K;yJmBnt+m(_F>/:g&~OO9YySg-P+/o51XV,=jXpI*M76DR%1)c<a@D}');
+define('SECURE_AUTH_KEY',  'z~%heC`l%w):l~h+@HsMx|~MxtZeJXS00j D{a9<CAkYiZ~+=};l/fhy?tP+d$Y0');
+define('LOGGED_IN_KEY',    'HuOdeelh-7+jDj|cyG-c%YgbCOJ8xG|W|d;+>_LX.#j.Y-}rXlj}L2k1W29nO=bP');
+define('NONCE_KEY',        'eH(`,@mz&ISKoUPgb_lJS{Y;,|s;hu^V1S-``GL8mE},34h&*_fE-={>gPFEfH1J');
+define('AUTH_SALT',        'F+4yp&,DK=B ufB{[JFr7|;Ou+Sc!TSxp2.>q|)),_x9280#M)>B.f/PGGwEQv=0');
+define('SECURE_AUTH_SALT', '0QL{PQrjX`B}k._.Vy<+2.Yo/3eQawleE*YxYQA@gR2i|xDGY-VY{XrgCgJ7-c?O');
+define('LOGGED_IN_SALT',   'QdBvz>DQz+9^V}CComEeQKmU&DWbERmq)}sZtvnTBeg8Ng40|3e.SFo@Ty3Y_iCA');
+define('NONCE_SALT',       '3g6DM&g_/Jy|ehae`aY(qzVX|$L%uGk}9jL`8&&tJn-7?/]ao`Z:r{n+Qov4W.4,');
 
 /** Absolute path to the WordPress directory. */
 if ( !defined('ABSPATH') )
