--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,7 +4,8 @@ RUN apt-get update -y \
 	&& apt-get upgrade -y \
 	&& apt-get install -y wget curl unzip php7.4 \
 	php7.4-fpm php7.4-mysql php7.4-curl php7.4-gd \
-	php7.4-xml php7.4-mbstring
+	php7.4-xml php7.4-mbstring \
+	netcat mariadb-client
 
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
 chmod +x wp-cli.phar && \
